--- a/apps/shop/src/app/components/Navbar/Navbar.css
+++ b/apps/shop/src/app/components/Navbar/Navbar.css
@@ -2,34 +2,32 @@
   background-color: var(--mantine-color-body);
   height: 100%;
   width: 300px;
-  padding: var(--mantine-spacing-md);
-  padding-top: 0;
   display: flex;
   flex-direction: column;
-  border-right: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  border-right: 1px solid
+    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
 .section {
-  margin-left: calc(var(--mantine-spacing-md) * -1);
-  margin-right: calc(var(--mantine-spacing-md) * -1);
-  margin-bottom: var(--mantine-spacing-md);
-
-  &:not(:last-of-type) {
-    border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
-  }
+  @apply w-full mx-auto;
 }
 
 .searchCode {
   font-weight: 700;
   font-size: 10px;
-  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-7));
-  border: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
+  background-color: light-dark(
+    var(--mantine-color-gray-0),
+    var(--mantine-color-dark-7)
+  );
+  border: 1px solid
+    light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
 }
 
 .mainLinks {
   padding-left: calc(var(--mantine-spacing-md) - var(--mantine-spacing-xs));
   padding-right: calc(var(--mantine-spacing-md) - var(--mantine-spacing-xs));
   padding-bottom: var(--mantine-spacing-md);
+  padding-top: var(--mantine-spacing-md);
 }
 
 .mainLink {
@@ -43,7 +41,10 @@
   color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
 
   &:hover {
-    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+    background-color: light-dark(
+      var(--mantine-color-gray-0),
+      var(--mantine-color-dark-6)
+    );
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
   }
 }
@@ -89,7 +90,10 @@
   font-weight: 500;
 
   &:hover {
-    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+    background-color: light-dark(
+      var(--mantine-color-gray-0),
+      var(--mantine-color-dark-6)
+    );
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
   }
 }
